--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/davidmorenocapel/GeeksHubs-P4-BackendMovie#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "mysql2": "^2.1.0",
     "sequelize": "^5.21.5",
-    "sqlite3": "^4.1.1"
+    "sequelize-cli": "^5.5.1"
   }
 }
